# goals

./: .gitignore  Cargo.toml  api.md  init.sql  log.txt
client/: index.html
client/src/: App.tsx  index.css  main.tsx
client/src/pages/: index.ts
client/src/pages/home/: home.tsx
scheduler/src/: lib.rs
src/: account.rs  auth.rs  config.rs  error.rs  goals.rs  main.rs  util.rs  validate.rs
src/db/: model.rs  schema.rs
