[package]
name = "goals"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.35.1" , features = ["full"]}
axum = {version = "0.7.2"  , features = ["macros"]}
diesel = {version = "2.1.4" , features = ["uuid"]}
diesel-async = {version = "0.4.1" , features = ["deadpool" , "postgres"]}
serde = {version = "1.0.193" , features = ["derive"]}
dotenv = "0.15.0"
uuid = {version = "1.6.1" , features = ["v4" , "serde"]}
deadpool = {version = "0.10.0" , features = ["managed"]}
axum-extra = {version = "0.9.0" , features = ["cookie"]}
bcrypt = "0.15.0"
validator = {version = "0.16.1" , features = ["derive"]}
tower-http = {version = "0.5.0" , features = ["fs"]}
